add layout for index and start adding layout to profile form

--- a/public/scss/libraries/layout/_index.scss
+++ b/public/scss/libraries/layout/_index.scss
@@ -1,3 +1,4 @@
 @import "libraries/layout/navigation";
 @import "libraries/layout/header";
+@import "libraries/layout/grid";
 @import "libraries/layout/footer";
