--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,109 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
 
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+*, *:before, *:after {
+  box-sizing: border-box; }
+
+*, *:after, *:before {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
+body {
+  width: 100vw;
+  height: 100vh;
+  display: flex; }
+
+.index-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+.profile-wrap {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto; }
+
+form {
+  border: 2px solid hotpink;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.index-button-to-quiz {
+  width: 150px;
+  height: 50px;
+  background-color: tomato;
+  margin-bottom: 1em;
+  border: 1px solid tomato;
+  border-radius: 3px;
+  color: #ffffff;
+  text-transform: uppercase;
+  letter-spacing: 1px; }
+
+.index-button-to-profile {
+  width: 150px;
+  height: 50px;
+  background-color: steelblue;
+  border: 1px solid steelblue;
+  border-radius: 3px;
+  color: #ffffff;
+  text-transform: uppercase;
+  letter-spacing: 1px; }
+
+.picture {
+  width: 30em;
+  height: 30em;
+  background: tomato;
+  margin: 1%; }
 
 /*# sourceMappingURL=main.css.map */
