--- a/views/admin.erb
+++ b/views/admin.erb
@@ -1,3 +1,3 @@
 <h1>Admin Console</h1>
-<a href="/users">List Users</a>
+<a href="/users">List All Users</a>
 <a href="/user/create">Create a User</a>
