--- a/public/scss/libraries/components/_buttons.scss
+++ b/public/scss/libraries/components/_buttons.scss
@@ -1,18 +1,19 @@
-.index-button-to-quiz {
-  width: 150px;
+.index-button-to-quiz, .start-quiz-button, .next {
+  width: 175px;
   height: 50px;
   background-color: tomato;
-  margin-bottom: 1em;
   border: 1px solid tomato;
   border-radius: 3px;
   color: #ffffff;
   text-transform: uppercase;
   letter-spacing: 1px;
+  margin-top: 1em;
 }
 
-.index-button-to-profile {
-  width: 150px;
+.index-button-to-profile, #submit-form {
+  width: 175px;
   height: 50px;
+  margin-top: 1em;
   background-color: steelblue;
   border: 1px solid steelblue;
   border-radius: 3px;
