--- a/public/scss/libraries/components/_forms.scss
+++ b/public/scss/libraries/components/_forms.scss
@@ -1,6 +1,22 @@
 form {
-  border: 2px solid hotpink;
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-transform: uppercase;
+  padding: 3%;
+}
+
+.form-group {
+  margin: 1%;
+}
+
+input {
+  font-size: 1em;
+  width: 7em;
+  height: 2em;
+  border-radius: 0.2em;
+}
+
+input:focus {
+  outline: none;
 }
