--- a/public/scss/libraries/layout/_grid.scss
+++ b/public/scss/libraries/layout/_grid.scss
@@ -1,5 +1,5 @@
 // ============= Index/Home Page =============
-.index-container {
+.index-container, .profile2-container {
   width: 100%;
   height: 100%;
   display: flex;
