--- a/public/scss/libraries/pages/_quiz.scss
+++ b/public/scss/libraries/pages/_quiz.scss
@@ -4,3 +4,32 @@
   background: tomato;
   margin: 1%;
 }
+
+.quiz-container, .result-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+  margin: 0 auto;
+  & h2 {
+    text-align: center;
+    padding: 3%;
+    font-size: 1.5em;
+  }
+}
+
+.quiz-pictures {
+  display: flex;
+  justify-content: center;
+}
+
+.result-container {
+  padding: 3%;
+  & h1 {
+    font-size: 2em;
+  }
+  & p {
+    font-size: 1.5em;
+    line-height: 2em;
+  }
+}
