--- a/views/user_new.erb
+++ b/views/user_new.erb
@@ -1,1 +1,57 @@
-<h1>user new</h1>
+
+    <div class="profile-wrap">
+      <header>
+        <p>Your answers will be shared with classmates. Feel free to answer only questions you are comfortable sharing with.</p>
+      </header>
+      <div class="profile-container">
+        <form class="create-profile">
+          <div class="form-group">
+            <label for="first name">First Name:</label>
+            <input type="text" name="name" value="">
+          </div>
+          <div class="form-group">
+            <label for="last name">Last Name:</label>
+            <input type="text" name="name" value="">
+          </div>
+          <div class="form-group">
+            <label for="track">Your Track:</label>
+            <select class="track">
+              <option>Ruby</option>
+              <option>C#</option>
+              <option>CSS</option>
+              <option>Android</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="transport">How to you get to school?</label>
+            <select>
+              <option>By bike</option>
+              <option>By bus</option>
+              <option>By MAX</option>
+              <option>Walking</option>
+              <option>Driving</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="lunch">Do you bring your lunch or go to the food carts?</label>
+            <select>
+              <option>I bring lunch</option>
+              <option>Go to food carts</option>
+              <option>50:50</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="bathroom">Have you been to the 9th floor bathroom?</label>
+            <select>
+              <option>Yes</option>
+              <option>No</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="height">How tall are you?</label>
+            <input type="number" name="name" value="">
+          </div>
+          <a href="profile2.html"><button id="submit-form" type="button" name="button">Submit</button></a>
+        </form>
+      </div>
+    </div>
