--- a/views/user_new.erb
+++ b/views/user_new.erb
@@ -4,54 +4,54 @@
         <p>Your answers will be shared with classmates. Feel free to answer only questions you are comfortable sharing with.</p>
       </header>
       <div class="profile-container">
-        <form class="create-profile">
+        <form class="create-profile" action="/users/create" method="post">
           <div class="form-group">
-            <label for="first name">First Name:</label>
-            <input type="text" name="name" value="">
+            <label for="first_name">First Name:</label>
+            <input type="text" name="first_name" value="">
           </div>
           <div class="form-group">
-            <label for="last name">Last Name:</label>
-            <input type="text" name="name" value="">
+            <label for="last_name">Last Name:</label>
+            <input type="text" name="last_name" value="">
           </div>
           <div class="form-group">
             <label for="track">Your Track:</label>
-            <select class="track">
-              <option>Ruby</option>
-              <option>C#</option>
-              <option>CSS</option>
-              <option>Android</option>
+            <select class="track" name="track">
+              <option value="ruby">Ruby</option>
+              <option value="C#">C#</option>
+              <option value="CSS">CSS</option>
+              <option value="Android">Android</option>
             </select>
           </div>
           <div class="form-group">
-            <label for="transport">How to you get to school?</label>
-            <select>
-              <option>By bike</option>
-              <option>By bus</option>
-              <option>By MAX</option>
-              <option>Walking</option>
-              <option>Driving</option>
+            <label for="transportation">How to you get to school?</label>
+            <select name="transportation">
+              <option value="bike">By bike</option>
+              <option value="bus">By bus</option>
+              <option value="max">By MAX</option>
+              <option value="walk">Walking</option>
+              <option value="drive">Driving</option>
             </select>
           </div>
           <div class="form-group">
             <label for="lunch">Do you bring your lunch or go to the food carts?</label>
-            <select>
-              <option>I bring lunch</option>
-              <option>Go to food carts</option>
-              <option>50:50</option>
+            <select name="lunch">
+              <option value="bring" >I bring lunch</option>
+              <option value="carts" >Go to food carts</option>
+              <option value="50:50" >50:50</option>
             </select>
           </div>
           <div class="form-group">
-            <label for="bathroom">Have you been to the 9th floor bathroom?</label>
-            <select>
-              <option>Yes</option>
-              <option>No</option>
+            <label for="ninth_floor">Have you been to the 9th floor bathroom?</label>
+            <select name="ninth_floor">
+              <option value="true">Yes</option>
+              <option value="false">No</option>
             </select>
           </div>
           <div class="form-group">
             <label for="height">How tall are you?</label>
-            <input type="number" name="name" value="">
+            <input type="number" name="height" value="">
           </div>
-          <a href="profile2.html"><button id="submit-form" type="button" name="button">Submit</button></a>
+          <button type="submit" name="button">Submit</button>
         </form>
       </div>
     </div>
