--- a/views/user_show.erb
+++ b/views/user_show.erb
@@ -1,1 +1,11 @@
 <h1>user show</h1>
+
+<h1><%= @user.first_name %></h1>
+<h2><%= @user.last_name %></h2>
+
+<a href="/user/<%=@user.id%>/edit">Edit User</a>
+
+<form class="delete" action="/user/<%=@user.id%>" method="post">
+  <input type="hidden" name="_method" value="delete">
+  <button type="submit" name="button">Delete User</button>
+</form>
