--- a/public/scss/libraries/base/_base.scss
+++ b/public/scss/libraries/base/_base.scss
@@ -10,4 +10,6 @@ body {
   width: 100vw;
   height: 100vh;
   display: flex;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background: rgba(255, 250, 250, 1);
 }
