--- a/public/scss/libraries/components/_buttons.scss
+++ b/public/scss/libraries/components/_buttons.scss
@@ -8,6 +8,7 @@
   text-transform: uppercase;
   letter-spacing: 1px;
   margin-top: 1em;
+  font-size: 1em;
 }
 
 .index-button-to-profile, #submit-form {
@@ -20,4 +21,5 @@
   color: #ffffff;
   text-transform: uppercase;
   letter-spacing: 1px;
+  font-size: 1em;
 }
