--- a/public/scss/libraries/pages/_quiz.scss
+++ b/public/scss/libraries/pages/_quiz.scss
@@ -12,6 +12,7 @@
   width: 80%;
   margin: 0 auto;
   & h2 {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-align: center;
     padding: 3%;
     font-size: 1.5em;
