--- a/public/scss/libraries/helpers/_mixins.scss
+++ b/public/scss/libraries/helpers/_mixins.scss
@@ -1,1 +1,14 @@
-
+// form styles
+@mixin form-styles {
+  border: 1px solid #111;
+  background: transparent;
+  width: 150px;
+  padding: 5px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  height: 34px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+}
