--- a/views/quiz_1.erb
+++ b/views/quiz_1.erb
@@ -4,5 +4,17 @@
     <div class="picture"></div>
     <div class="picture"></div>
   </div>
-  <a href="quiz2.html"><button class="next" type="button" name="button">Next</button></a>
+
+  <form class="" action="player/:id" method="post">
+    <input type="hidden" name="_method" value="patch">
+    <input type="hidden" name="answer" value="-2">
+    <button type="submit" name="button">True</button>
+  </form>
+
+  <form class="" action="player/:id" method="post">
+    <input type="hidden" name="_method" value="patch">
+    <input type="hidden" name="answer" value="+2">
+    <button type="submit" name="button">False</button>
+  </form>
+
 </div>
