add basic test routing and functionality

--- a/views/quiz_1.erb
+++ b/views/quiz_1.erb
@@ -5,16 +5,17 @@
     <div class="picture"></div>
   </div>
 
-  <form class="" action="player/:id" method="post">
+  <form class="" action="/player/<%=@player.id%>" method="post">
     <input type="hidden" name="_method" value="patch">
     <input type="hidden" name="answer" value="-2">
     <button type="submit" name="button">True</button>
   </form>
 
-  <form class="" action="player/:id" method="post">
+  <form class="" action="/player/<%=@player.id%>" method="post">
     <input type="hidden" name="_method" value="patch">
     <input type="hidden" name="answer" value="+2">
     <button type="submit" name="button">False</button>
   </form>
-
 </div>
+
+<h1>score <%=@player.score%></h1>
