--- a/views/result.erb
+++ b/views/result.erb
@@ -1,5 +1,11 @@
 <div class="result-container">
   <h1>Thank you for taking the quiz!</h1>
   <p>You know your classmates 80%</p>
-  <a href="quiz1.html"><button class="start-quiz-button" type="button" name="button">Take the quiz again!</button></a>
+
+  <form class="" action="/player/<%=@player.id%>/reset" method="post">
+    <button class="start-quiz-button" type="submit" name="button">Take the quiz again!</button>
+  </form>
+
+  <h1>score <%=@player.score()%></h1>
+
 </div>
