--- a/views/quiz_2.erb
+++ b/views/quiz_2.erb
@@ -1,8 +1,22 @@
 <div class="quiz-container">
-  <h2>Which person is doing C#?</h2>
-  <div class="quiz-pictures">
-    <div class="picture"></div>
-    <div class="picture"></div>
-  </div>
-  <a href="quiz4.html"><button class="next" type="button" name="button">Next</button></a>
+  <div class="quiz-container">
+    <h2>Which person goes to food carts?</h2>
+    <div class="quiz-pictures">
+      <div class="picture"></div>
+      <div class="picture"></div>
+    </div>
+    
+  <form class="" action="/player/<%=@player.id%>" method="post">
+    <input type="hidden" name="_method" value="patch">
+    <input type="hidden" name="answer" value="-2">
+    <button type="submit" name="button">True</button>
+  </form>
+
+  <form class="" action="/player/<%=@player.id%>" method="post">
+    <input type="hidden" name="_method" value="patch">
+    <input type="hidden" name="answer" value="+2">
+    <button type="submit" name="button">False</button>
+  </form>
 </div>
+
+<h1>score <%=@player.score%></h1>
