--- a/public/css/main.css
+++ b/public/css/main.css
@@ -123,7 +123,7 @@ select {
   appearance: none;
   outline: none; }
 
-.index-button-to-quiz, .start-quiz-button, .next {
+.index-button-to-quiz, .start-quiz-button, .next, .go-back {
   width: 175px;
   height: 50px;
   background-color: tomato;
@@ -135,7 +135,7 @@ select {
   margin-top: 1em;
   font-size: 1em; }
 
-.index-button-to-profile, #submit-form {
+.index-button-to-profile, .new-user-submit {
   width: 175px;
   height: 50px;
   margin-top: 1em;
