--- a/public/scss/libraries/components/_buttons.scss
+++ b/public/scss/libraries/components/_buttons.scss
@@ -1,4 +1,4 @@
-.index-button-to-quiz, .start-quiz-button, .next {
+.index-button-to-quiz, .start-quiz-button, .next, .go-back {
   width: 175px;
   height: 50px;
   background-color: tomato;
@@ -11,7 +11,7 @@
   font-size: 1em;
 }
 
-.index-button-to-profile, #submit-form {
+.index-button-to-profile, .new-user-submit {
   width: 175px;
   height: 50px;
   margin-top: 1em;
