--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Ice Pick</title>
+    <link rel="stylesheet" href="<%=url('css/main.css')%>" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
     <%= yield %>
