--- a/views/user_new.erb
+++ b/views/user_new.erb
@@ -49,9 +49,16 @@
           </div>
           <div class="form-group">
             <label for="height">How tall are you?</label>
-            <input type="number" name="height" value="">
+            <select name="height">
+              <option>4'11" or shorter</option>
+              <option>5'0" - 5'5"</option>
+              <option>5'6" - 5'11"</option>
+              <option>6'0" - 6'5"</option>
+              <option>6'6" - 6'11"</option>
+            </select>
           </div>
-          <button type="submit" name="button">Submit</button>
+          <button class="new-user-submit" type="submit" name="button">Submit</button>
+          <button class="go-back" type="button" name="button">Go back</button>
         </form>
       </div>
     </div>
