--- a/views/user_show.erb
+++ b/views/user_show.erb
@@ -1,7 +1,8 @@
 <h1>user show</h1>
 
-<h1><%= @user.first_name %></h1>
-<h2><%= @user.last_name %></h2>
+<h6><%= @user.first_name %></h6>
+<br>
+<h6><%= @user.last_name %></h6>
 
 <a href="/user/<%=@user.id%>/edit">Edit User</a>
 
@@ -9,3 +10,5 @@
   <input type="hidden" name="_method" value="delete">
   <button type="submit" name="button">Delete User</button>
 </form>
+
+<h1>Hello!!!!!!!!!!</h1>
