add columns and controller random users

--- a/views/user_show.erb
+++ b/views/user_show.erb
@@ -4,6 +4,8 @@
 <br>
 <h6><%= @user.last_name %></h6>
 
+<img src="<%=@user.photo%>" alt="picture of user" />
+
 <a href="/user/<%=@user.id%>/edit">Edit User</a>
 
 <form class="delete" action="/user/<%=@user.id%>" method="post">
