--- a/views/user_edit.erb
+++ b/views/user_edit.erb
@@ -1,4 +1,5 @@
 
+
     <div class="profile-wrap">
       <header>
         <p>Your answers will be shared with classmates. Feel free to answer only questions you are comfortable sharing with.</p>
@@ -50,9 +51,21 @@
           </div>
           <div class="form-group">
             <label for="height">How tall are you?</label>
-            <input type="number" name="height" value="">
+            <select name="height">
+              <option value="70">4'11" or shorter</option>
+              <option value="70">5'0" - 5'5"</option>
+              <option value="70">5'6" - 5'11"</option>
+              <option value="70">6'0" - 6'5"</option>
+              <option value="70">6'6" - 6'11"</option>
+            </select>
           </div>
-          <button type="submit" name="button">Update User</button>
+          <div class="form-group">
+            <label for="photo">Photo</label>
+              <input type="text" name="photo" value="">
+            </select>
+          </div>
+          <button class="new-user-submit" type="submit" name="button">Submit</button>
+          <button class="go-back" type="button" name="button">Go back</button>
         </form>
       </div>
     </div>
