--- a/views/user_new.erb
+++ b/views/user_new.erb
@@ -50,11 +50,16 @@
           <div class="form-group">
             <label for="height">How tall are you?</label>
             <select name="height">
-              <option>4'11" or shorter</option>
-              <option>5'0" - 5'5"</option>
-              <option>5'6" - 5'11"</option>
-              <option>6'0" - 6'5"</option>
-              <option>6'6" - 6'11"</option>
+              <option value="3">4'11" or shorter</option>
+              <option value="3">5'0" - 5'5"</option>
+              <option value="3">5'6" - 5'11"</option>
+              <option value="3">6'0" - 6'5"</option>
+              <option value="3">6'6" - 6'11"</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="photo">Photo</label>
+              <input type="text" name="photo" value="">
             </select>
           </div>
           <button class="new-user-submit" type="submit" name="button">Submit</button>
