commit to merge avt_branch

--- a/views/quiz_1.erb
+++ b/views/quiz_1.erb
@@ -1,5 +1,6 @@
 <div class="quiz-container">
   <h2>Which person is <%=@user_1.first_name%></h2>
+  <h2>Which person is <%=@user_2.first_name%></h2>
   <div class="quiz-pictures">
     <div class="picture">
       <form class="" action="/player/<%=@player.id%>" method="post">
