--- a/views/quiz_4.erb
+++ b/views/quiz_4.erb
@@ -15,5 +15,13 @@
     <input type="hidden" name="answer" value="+2">
     <button type="submit" name="button">False</button>
   </form>
+  <h1>score <%=@player.score%></h1>
+  <div class="toilet">
+    <div class="toilet-bowl">
+      <img src="/img/toilet-bowl.png" alt="toilet bowl"/>
+    </div>
+    <div class="toilet-flush">
+      <img src="/img/toilet-flusher.png" alt="toilet flusher"/>
+    </div>
+  </div>
 </div>
-<h1>score <%=@player.score%></h1>
