--- a/views/quiz_1.erb
+++ b/views/quiz_1.erb
@@ -17,4 +17,14 @@
     <button type="submit" name="button">False</button>
   </form>
   <h1>score <%=@player.score%></h1>
+  <div class="nametag-container">
+      <div class="nametag-card">
+        <div class="face">
+          <img src="/img/nametag2.png"/>
+        </div>
+        <div class="back face">
+          <img src="/img/nametag2.png"/>
+        </div>
+      </div>
+    </div>
 </div>
