--- a/views/user_new.erb
+++ b/views/user_new.erb
@@ -48,13 +48,10 @@
             </select>
           </div>
           <div class="form-group">
-            <label for="height">How tall are you?</label>
+            <label for="pokemon">Do you play Pokémon GO?</label>
             <select name="height">
-              <option value="3">4'11" or shorter</option>
-              <option value="3">5'0" - 5'5"</option>
-              <option value="3">5'6" - 5'11"</option>
-              <option value="3">6'0" - 6'5"</option>
-              <option value="3">6'6" - 6'11"</option>
+              <option value="yes">yes</option>
+              <option value="no">no</option>
             </select>
           </div>
           <div class="form-group">
