--- a/views/user_success.erb
+++ b/views/user_success.erb
@@ -1,5 +1,7 @@
 
 <div class="profile2-container">
   <h1>Thank you for creating a profile!</h1>
-  <a href="quiz1.html"><button class="start-quiz-button" type="button" name="button">Take the Quiz!</button></a>
+  <form class="" action="/players/create" method="post">
+    <button class="start-quiz-button" type="submit" name="button">Take the Quiz!</button>
+  </form>
 </div>
