--- a/views/quiz_5.erb
+++ b/views/quiz_5.erb
@@ -1,5 +1,5 @@
 <div class="quiz-container">
-  <h2>Which person is taller?</h2>
+  <h2>Which person plays Pokémon Go?</h2>
   <div class="quiz-pictures">
     <div class="picture"></div>
     <div class="picture"></div>
@@ -15,5 +15,17 @@
     <input type="hidden" name="answer" value="+2">
     <button type="submit" name="button">False</button>
   </form>
+  <h1>score <%=@player.score%></h1>
+  <div class="pokemon">
+      <div class="pokemon-roll">
+        <div class="pokemon-ball">
+          <img id="pokemon-ball-red" src="/img/pokemon-ball-red-center.png" alt="pokemon red ball dot" />
+          <img id="pokemon-ball" src="/img/pokemon-ball-white.png" alt="pokemon ball" />
+        </div>
+        <div class="pokemon-character">
+          <img id="pokemon-character" src="/img/pokemon-character-without-tail.png" alt="pokemon character (without tail)" />
+          <img id="pokemon-character-tail" src="/img/pokemon-character-tail.png" alt="pokemon character tail" />
+        </div>
+      </div>
+    </div>
 </div>
-<h1>score <%=@player.score%></h1>
