fix bicycle animation

--- a/public/scss/libraries/pages/_quiz.scss
+++ b/public/scss/libraries/pages/_quiz.scss
@@ -34,3 +34,9 @@
     line-height: 2em;
   }
 }
+
+// .container-for-bike {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+// }
