--- a/public/scss/libraries/components/_animations.scss
+++ b/public/scss/libraries/components/_animations.scss
@@ -1,6 +1,6 @@
 // burger animation
 .burger {
-  margin-top: 5%;
+  margin-top: 7%;
   position: relative;
   width: 497px;
   height: 459px;
@@ -111,32 +111,39 @@
   position: relative;
 }
 
-.bicycle-frame img {
-  position: absolute;
+.bicycle-frame {
+  width: 100%;
+  height: auto;
   z-index: 500;
 }
 
-.bicycle-wheel-front img {
+.bicycle-wheel-front {
+  width: 302px;
+  height: 302px;
   position: absolute;
-  top: 39%;
-  left: 0.05%;
-  z-index: 499;
+  top: 33.5%;
+  left: 0%;
+  z-index: -9;
   -webkit-animation: rotate 3s linear infinite;
 }
 
-.bicycle-crank img {
+.bicycle-crank {
+  width: 143px;
+  height: 143px;
   position: absolute;
-  top: 68%;
-  left: 44%;
+  top: 54%;
+  left: 44.55%;
   z-index: 501;
   -webkit-animation: rotateCrank 2.5s linear infinite;
 }
 
-.bicycle-wheel-rear img {
+.bicycle-wheel-rear {
+  width: 302px;
+  height: 302px;
   position: absolute;
-  top: 39%;
-  left: 62.05%;
-  z-index: 499;
+  top: 33.5%;
+  left: 62.5%;
+  z-index: -9;
   -webkit-animation: rotate 3s linear infinite;
 }
 
