--- a/views/quiz_6.erb
+++ b/views/quiz_6.erb
@@ -1,22 +1,23 @@
-<div class="quiz-container">
-  <h2>Which person rides their bike to school?</h2>
-  <div class="quiz-pictures">
-    <div class="picture"></div>
-    <div class="picture"></div>
-  </div>
-  <form class="" action="/player/<%=@player.id%>" method="post">
-    <input type="hidden" name="_method" value="patch">
-    <input type="hidden" name="answer" value="-2">
-    <button type="submit" name="button">True</button>
-  </form>
+<!-- <div class="container-for-bike"> -->
+  <div class="quiz-container">
+    <h2>Which person rides their bike to school?</h2>
+    <div class="quiz-pictures">
+      <div class="picture"></div>
+      <div class="picture"></div>
+    </div>
+    <form class="" action="/player/<%=@player.id%>" method="post">
+      <input type="hidden" name="_method" value="patch">
+      <input type="hidden" name="answer" value="-2">
+      <button type="submit" name="button">True</button>
+    </form>
 
-  <form class="" action="/player/<%=@player.id%>" method="post">
-    <input type="hidden" name="_method" value="patch">
-    <input type="hidden" name="answer" value="+2">
-    <button type="submit" name="button">False</button>
-  </form>
-  <h1>score <%=@player.score%></h1>
-  <div class="bicycle">
+    <form class="" action="/player/<%=@player.id%>" method="post">
+      <input type="hidden" name="_method" value="patch">
+      <input type="hidden" name="answer" value="+2">
+      <button type="submit" name="button">False</button>
+    </form>
+    <h1>score <%=@player.score%></h1>
+    <div class="bicycle">
       <div class="bicycle-frame">
         <img src="/img/bike-frame.png" alt="bicycle frame"/>
       </div>
@@ -30,4 +31,5 @@
         <img src="/img/bike-wheel-rear.png" alt="bicycle rear wheel"/>
       </div>
     </div>
-</div>
+  </div>
+<!-- </div> -->
