add questions form, refactor random record retrieval, configure session to keep track of last question asked

--- a/views/user_edit.erb
+++ b/views/user_edit.erb
@@ -9,11 +9,11 @@
           <input type="hidden" name="_method" value="patch">
           <div class="form-group">
             <label for="first_name">First Name:</label>
-            <input type="text" name="first_name" value="">
+            <input type="text" name="first_name" value="<%=@user.first_name%>">
           </div>
           <div class="form-group">
             <label for="last_name">Last Name:</label>
-            <input type="text" name="last_name" value="">
+            <input type="text" name="last_name" value="<%=@user.last_name%>">
           </div>
           <div class="form-group">
             <label for="track">Your Track:</label>
@@ -51,14 +51,14 @@
           </div>
           <div class="form-group">
             <label for="pokemon">Do you play Pokémon GO?</label>
-            <select name="height">
+            <select name="pokemon">
               <option value="yes">yes</option>
               <option value="no">no</option>
             </select>
           </div>
           <div class="form-group">
             <label for="photo">Photo</label>
-              <input type="text" name="photo" value="">
+              <input type="text" name="photo" value="<%=@user.photo%>">
             </select>
           </div>
           <button class="new-user-submit" type="submit" name="button">Submit</button>
