--- a/views/quiz.erb
+++ b/views/quiz.erb
@@ -1,13 +1,39 @@
 <div class="quiz-container">
-  <h2><%= @question.prompt() %>  </h2>
-<%if @rand_num.even? %>
+  <h1><%=@topic%></h1>
 
+  <%if @question.topic == 'first_name'%>
+    <h2><%= @question.prompt()%> <%=@user_1.first_name()%>?</h2>
+  <%elsif @question.topic == 'track'%>
+    <h2><%= @question.prompt()%> <%=@user_1.track()%>?</h2>
+  <%else%>
+    <h2><%= @question.prompt()%></h2>
+  <%end%>
+
+<%if(false)%>
+  <h6><%= @user_1.first_name %></h6>
+  <h6><%= @user_1.transportation %></h6>
+  <h6>Pok: <%= @user_1.pokemon %></h6>
+  <h6><%= @user_1.track %></h6>
+  <h6>lunch: <%= @user_1.lunch %></h6>
+  <h6>ninth: <%= @user_1.ninth_floor %></h6>
+
+
+  <h6><%= @user_2.first_name %></h6>
+  <h6><%= @user_2.transportation %></h6>
+  <h6>Pok: <%= @user_2.pokemon %></h6>
+  <h6><%= @user_2.track %></h6>
+  <h6> lunch <%= @user_2.lunch %></h6>
+  <h6>ninth: <%= @user_2.ninth_floor %></h6>
+<%end%>
+
+
+<%if @rand_num.even? %>
 
   <div class="quiz-pictures">
     <div class="picture">
       <img src="<%=@user_2.photo()%>" alt="picture of user" />
       <form class="" action="/player/<%=@player.id%>" method="post">
-        <input type="hidden" name="attr" value="first_name">
+        <input type="hidden" name="last_question" value="<%=@question.id%>">
         <input type="hidden" name="_method" value="patch">
         <input type="hidden" name="answer" value="-2">
         <button type="submit" name="button">This Human</button>
@@ -16,7 +42,7 @@
     <div class="picture">
       <img src="<%=@user_1.photo()%>" alt="picture of user" />
       <form class="" action="/player/<%=@player.id%>" method="post">
-        <input type="hidden" name="attr" value="first_name">
+        <input type="hidden" name="last_question" value="<%=@question.id%>">
         <input type="hidden" name="_method" value="patch">
         <input type="hidden" name="answer" value="+2">
         <button type="submit" name="button">This Human</button>
@@ -32,7 +58,7 @@
     <div class="picture">
       <img src="<%=@user_1.photo()%>" alt="picture of user" />
       <form class="" action="/player/<%=@player.id%>" method="post">
-        <input type="hidden" name="attr" value="first_name">
+        <input type="hidden" name="last_question" value="<%=@question.id%>">
         <input type="hidden" name="_method" value="patch">
         <input type="hidden" name="answer" value="+2">
         <button type="submit" name="button">This Human</button>
@@ -41,7 +67,7 @@
     <div class="picture">
       <img src="<%=@user_2.photo()%>" alt="picture of user" />
       <form class="" action="/player/<%=@player.id%>" method="post">
-        <input type="hidden" name="attr" value="first_name">
+        <input type="hidden" name="last_question" value="<%=@question.id%>">
         <input type="hidden" name="_method" value="patch">
         <input type="hidden" name="answer" value="-2">
         <button type="submit" name="button">This Human</button>
