--- a/views/user_new.erb
+++ b/views/user_new.erb
@@ -49,7 +49,7 @@
           </div>
           <div class="form-group">
             <label for="pokemon">Do you play Pokémon GO?</label>
-            <select name="height">
+            <select name="pokemon">
               <option value="yes">yes</option>
               <option value="no">no</option>
             </select>
