--- a/views/user_edit.erb
+++ b/views/user_edit.erb
@@ -57,6 +57,21 @@
             </select>
           </div>
           <div class="form-group">
+            <label for="temperature">The temperature of the computer room is...</label>
+            <select name="temperature">
+              <option value="hot">Too Hot</option>
+              <option value="right">Just Right</option>
+              <option value="cold" selected>Too Cold</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="sleeping">Have you ever napped or slept on the Epicodus couches?</label>
+            <select name="sleeping">
+              <option value="yes">yes</option>
+              <option value="no">no</option>
+            </select>
+          </div>
+          <div class="form-group">
             <label for="photo">Photo</label>
               <input type="text" name="photo" value="<%=@user.photo%>">
             </select>
