--- a/views/user_new.erb
+++ b/views/user_new.erb
@@ -55,10 +55,25 @@
             </select>
           </div>
           <div class="form-group">
+            <label for="temperature">The temperature of the computer room is...</label>
+            <select name="temperature">
+              <option value="hot">Too Hot</option>
+              <option value="right">Just Right</option>
+              <option value="cold" selected>Too Cold</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="sleeping">Have you ever napped or slept on the Epicodus couches?</label>
+            <select name="sleeping">
+              <option value="yes">yes</option>
+              <option value="no">no</option>
+            </select>
+          </div>
+          <!-- <div class="form-group">
             <label for="photo">Photo</label>
               <input type="text" name="photo" value="">
             </select>
-          </div>
+          </div> -->
           <button class="new-user-submit" type="submit" name="button">Submit</button>
           <button class="go-back" type="button" name="button">Go back</button>
         </form>
