--- a/views/user_success.erb
+++ b/views/user_success.erb
@@ -1,7 +1,6 @@
 
 <div class="profile2-container">
   <h1>Thank you for creating a profile!</h1>
-  <form class="" action="/players/create" method="post">
-    <button class="start-quiz-button" type="submit" name="button">Take the Quiz!</button>
-  </form>
+
+<a href="/users/new"><button class="start-quiz-button" type="submit" name="button">Make another profile!</button></a>  
 </div>
