commented out back button

--- a/views/user_new.erb
+++ b/views/user_new.erb
@@ -75,7 +75,7 @@
             </select>
           </div> -->
           <button class="new-user-submit" type="submit" name="button">Submit</button>
-          <button class="go-back" type="button" name="button">Go back</button>
+          <!-- <button class="go-back" type="button" name="button">Go back</button> -->
         </form>
       </div>
     </div>
