--- a/public/css/main.css
+++ b/public/css/main.css
@@ -77,6 +77,35 @@ header {
   justify-content: center;
   align-items: center; }
 
+.container-user-show {
+  padding: 3%;
+  display: flex;
+  flex-direction: column; }
+  .container-user-show h1 {
+    margin-bottom: 5%;
+    text-transform: capitalize; }
+  .container-user-show h6 {
+    margin-bottom: 5%;
+    text-transform: capitalize; }
+  .container-user-show img {
+    width: 300px;
+    height: 300px;
+    margin-bottom: 5%; }
+  .container-user-show a, .container-user-show form button {
+    width: 175px;
+    height: 50px;
+    background-color: steelblue;
+    border-radius: 5px;
+    color: #ffffff;
+    text-decoration: none;
+    text-align: center;
+    font-size: 1em;
+    margin: 0 auto;
+    padding: 15px 30px; }
+  .container-user-show form button {
+    background-color: tomato;
+    border: 1px solid tomato; }
+
 .profile-wrap {
   width: 80%;
   height: 100%;
