--- a/public/scss/libraries/layout/_grid.scss
+++ b/public/scss/libraries/layout/_grid.scss
@@ -8,6 +8,41 @@
   align-items: center;
 }
 
+.container-user-show {
+  padding: 3%;
+  display: flex;
+  flex-direction: column;
+  & h1 {
+    margin-bottom: 5%;
+    text-transform: capitalize;
+  }
+  & h6 {
+    margin-bottom: 5%;
+    text-transform: capitalize;
+  }
+  & img {
+    width: 300px;
+    height: 300px;
+    margin-bottom: 5%;
+  }
+  & a, & form button {
+    width: 175px;
+    height: 50px;
+    background-color: steelblue;
+    border-radius: 5px;
+    color: #ffffff;
+    text-decoration: none;
+    text-align: center;
+    font-size: 1em;
+    margin: 0 auto;
+    padding: 15px 30px;
+  }
+  & form button {
+    background-color: tomato;
+    border: 1px solid tomato;
+  }
+}
+
 // ============= Profile/Home Page =============
 .profile-wrap {
   width: 80%;
