--- a/views/quiz.erb
+++ b/views/quiz.erb
@@ -24,7 +24,7 @@
     </div>
     <div class="picture">
       <img src="<%=@user_1.photo()%>" alt="picture of user" />
-      <form class="" action="/player/<%=@player.id%>" method="post">
+      <form class="correct" action="/player/<%=@player.id%>" method="post">
         <input type="hidden" name="last_question" value="<%=@question.id%>">
         <input type="hidden" name="_method" value="patch">
         <input type="hidden" name="answer" value="+2">
@@ -40,7 +40,7 @@
   <div class="quiz-pictures">
     <div class="picture">
       <img src="<%=@user_1.photo()%>" alt="picture of user" />
-      <form class="" action="/player/<%=@player.id%>" method="post">
+      <form class="correct" action="/player/<%=@player.id%>" method="post">
         <input type="hidden" name="last_question" value="<%=@question.id%>">
         <input type="hidden" name="_method" value="patch">
         <input type="hidden" name="answer" value="+2">
