add javascript and jQuery for success/failure messages

--- a/views/admin.erb
+++ b/views/admin.erb
@@ -1,3 +1,5 @@
 <h1>Admin Console</h1>
 <a href="/users">List All Users</a>
 <a href="/user/create">Create a User</a>
+<a href="/questions/new">Create a Question</a>
+<a href="/questions">List all Question</a>
