--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Ice Pick</title>
     <link rel="stylesheet" href="<%=url('css/main.css')%>" media="screen" title="no title" charset="utf-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script type="text/javascript" src="<%=url('javascript/scripts.js')%>"></script>
+
   </head>
   <body>
     <%= yield %>
