add sleeping and temperature animations and images

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -531,6 +531,87 @@ select {
     transform: scale(1.125); }
   100% {
     transform: scale(1); } }
+/*=============== SLEEP ANIMATION ===============*/
+.sleep-animation {
+  width: 830px;
+  height: 405px;
+  position: relative; }
+
+.couch {
+  width: 100%;
+  height: auto; }
+
+.napper {
+  width: 830px;
+  height: 405px;
+  position: absolute;
+  top: 10%;
+  left: 0%; }
+
+.arm {
+  width: 830px;
+  height: 405px;
+  position: absolute;
+  top: 10%;
+  left: 0%;
+  -webkit-animation: sleeping 2.5s linear infinite;
+  -webkit-transform-origin: 50% 50% 100;
+  transform-origin: 50% 50% 100; }
+
+@keyframes sleeping {
+  25% {
+    -webkit-transform: rotate(1deg); }
+  50% {
+    -webkit-transform: rotate(1deg); }
+  75% {
+    -webkit-transform: rotate(-1deg); }
+  100% {
+    -webkit-transform: rotate(-1deg); } }
+/*=============== TEMPERATURE ANIMATION ===============*/
+.thermometer {
+  width: 944px;
+  height: 472px;
+  position: relative; }
+
+.thermometer-base {
+  width: 100%;
+  height: auto; }
+
+.temp1 {
+  width: 944px;
+  height: 472px;
+  position: absolute;
+  top: 10%;
+  left: 0%;
+  -webkit-animation: thermometerHigher 2s linear infinite;
+  animation-delay: 1s; }
+
+.temp2 {
+  width: 944px;
+  height: 472px;
+  position: absolute;
+  top: -10%;
+  left: 0%;
+  -webkit-animation: thermometerLower 2s linear infinite;
+  animation-delay: 1s; }
+
+.thermometer-lines {
+  width: 944px;
+  height: 472px;
+  position: absolute;
+  top: 0;
+  left: 0; }
+
+@keyframes thermometerLower {
+  50% {
+    top: -5%; }
+  100% {
+    top: 0%; } }
+@keyframes thermometerHigher {
+  50% {
+    top: 5%; }
+  100% {
+    top: 0%; } }
 h1 {
   font-size: 1.5em; }
 
@@ -539,6 +620,8 @@ h1 {
   height: 30em;
   background: tomato;
   margin: 1%; }
+  .picture img {
+    width: 100%; }
 
 .quiz-container, .result-container {
   display: flex;
