--- a/views/quiz_5.erb
+++ b/views/quiz_5.erb
@@ -16,7 +16,7 @@
     <button type="submit" name="button">False</button>
   </form>
   <h1>score <%=@player.score%></h1>
-  <div class="pokemon">
+  <!-- <div class="pokemon">
       <div class="pokemon-roll">
         <div class="pokemon-ball">
           <img id="pokemon-ball-red" src="/img/pokemon-ball-red-center.png" alt="pokemon red ball dot" />
@@ -27,5 +27,5 @@
           <img id="pokemon-character-tail" src="/img/pokemon-character-tail.png" alt="pokemon character tail" />
         </div>
       </div>
-    </div>
+    </div> -->
 </div>
