--- a/views/first_name.erb
+++ b/views/first_name.erb
@@ -62,3 +62,13 @@
 
 </div>
 <h1>score <%=@player.score%></h1>
+<div class="nametag-container">
+    <div class="nametag-card">
+      <div class="face">
+        <img src="/img/nametag2.png"/>
+      </div>
+      <div class="back face">
+        <img src="/img/nametag2.png"/>
+      </div>
+    </div>
+  </div>
