--- a/views/lunch.erb
+++ b/views/lunch.erb
@@ -62,3 +62,14 @@
 
 </div>
 <h1>score <%=@player.score%></h1>
+<div class="burger">
+  <div class="burger-layers">
+    <img src="/img/burger.png" alt="burger... possibly vegan"/>
+  </div>
+  <div class="burger-bite1"></div>
+  <div class="burger-bite2"></div>
+  <div class="burger-bite3"></div>
+  <div class="burger-bite4"></div>
+  <div class="burger-bite5"></div>
+  <div class="burger-bite6"></div>
+</div>
