--- a/views/ninth_floor.erb
+++ b/views/ninth_floor.erb
@@ -62,3 +62,11 @@
 
 </div>
 <h1>score <%=@player.score%></h1>
+<div class="toilet">
+  <div class="toilet-bowl">
+    <img src="/img/toilet-bowl.png" alt="toilet bowl"/>
+  </div>
+  <div class="toilet-flush">
+    <img src="/img/toilet-flusher.png" alt="toilet flusher"/>
+  </div>
+</div>
