--- a/views/quiz_1.erb
+++ b/views/quiz_1.erb
@@ -19,7 +19,7 @@
 
 
   <h1>score <%=@player.score%></h1>
-  <div class="nametag-container">
+  <!-- <div class="nametag-container">
       <div class="nametag-card">
         <div class="face">
           <img src="/img/nametag2.png"/>
@@ -28,5 +28,5 @@
           <img src="/img/nametag2.png"/>
         </div>
       </div>
-    </div>
+    </div> -->
 </div>
