--- a/views/quiz_3.erb
+++ b/views/quiz_3.erb
@@ -16,7 +16,7 @@
     <button type="submit" name="button">False</button>
   </form>
   <h1>score <%=@player.score%></h1>
-  <div class="computer-container">
+  <!-- <div class="computer-container">
       <div class="computers">
         <img src="/img/mac-computers-blank.png" alt="Mac computers" />
       </div>
@@ -32,5 +32,5 @@
       <div class="android">
         <img src="/img/icon-android.png" alt="" />
       </div>
-    </div>
+    </div> -->
 </div>
