--- a/views/sleeping.erb
+++ b/views/sleeping.erb
@@ -62,3 +62,14 @@
 
 </div>
 <h1>score <%=@player.score%></h1>
+<div class="sleep-animation">
+  <div class="couch">
+    <img src="img/couch-nap-couch.png" alt="Couch" />
+  </div>
+  <div class="napper">
+    <img src="img/couch-nap-napper.png" alt="Napper" />
+  </div>
+  <div class="arm">
+    <img src="img/couch-nap-napper-arm.png" alt="Arm" />
+  </div>
+</div>
