--- a/views/temperature.erb
+++ b/views/temperature.erb
@@ -62,3 +62,17 @@
 
 </div>
 <h1>score <%=@player.score%></h1>
+<div class="thermometer">
+  <div class="thermometer-base">
+    <img src="img/temperature-thermometer-base.png" alt="Thermometer class" />
+  </div>
+  <div class="temp1">
+    <img src="img/temperature-thermometer-high-temp.png" alt="Temperature level high" />
+  </div>
+  <div class="temp2">
+    <img src="img/temperature-thermometer-low-temp.png" alt="Temperature level low" />
+  </div>
+  <div class="thermometer-lines">
+    <img src="img/temperature-thermometer-lines.png" alt="Thermometer lines" />
+  </div>
+</div>
