fix bugs in the html

--- a/views/admin.erb
+++ b/views/admin.erb
@@ -1,5 +1,14 @@
 <h1>Admin Console</h1>
+<hr>
 <a href="/users">List All Users</a>
+<hr>
 <a href="/user/create">Create a User</a>
+<hr>
+<a href="/user/:id/edit">Edit a User Profile</a>
+<hr>
+<a href="/user/:id/photo">Edit a User Photo</a>
+<hr>
 <a href="/questions/new">Create a Question</a>
+<hr>
 <a href="/questions">List all Question</a>
+<hr>
