--- a/views/question_new.erb
+++ b/views/question_new.erb
@@ -7,7 +7,7 @@
   <!-- <input type="text" name="topic" value=""> -->
   <label for="topic">Topic
     <select name="topic" placeholder="topic">
-      <option value="tranportation"></option>
+      <option value="tranportation">Transportation</option>
       <option value="lunch">Lunch</option>
       <option value="first_name">First Name</option>
       <option value="ninth_floor">Ninth Floor</option>
