--- a/views/result.erb
+++ b/views/result.erb
@@ -1,11 +1,12 @@
 <div class="result-container">
-  <h1>Thank you for taking the quiz!</h1>
-  <p>You know your classmates 80%</p>
+  <h1>Thank you for playing Ice Pick!</h1>
+  <p>Get to know your classmates</p>
 
   <form class="" action="/player/<%=@player.id%>/reset" method="post">
-    <button class="start-quiz-button" type="submit" name="button">Take the quiz again!</button>
+    <button class="start-quiz-button" type="submit" name="button">Play Ice Pick Again!</button>
   </form>
 
   <h1>score <%=@player.score()%></h1>
+  <h1>Score: <%=@player.score%> out of: <%=@player.counter%> </h1>
 
 </div>
