--- a/public/scss/libraries/pages/_landing.scss
+++ b/public/scss/libraries/pages/_landing.scss
@@ -1,3 +1,8 @@
 .index-container {
   width: 100%;
+  height: auto;
+  background: url('/img/background.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
