--- a/public/scss/libraries/components/_buttons.scss
+++ b/public/scss/libraries/components/_buttons.scss
@@ -1,10 +1,23 @@
-.index-button-to-quiz, .start-quiz-button, .next, .go-back {
+.start-quiz-button, .next, .go-back {
   width: 175px;
   height: 50px;
   background-color: tomato;
   border: 1px solid tomato;
   border-radius: 3px;
   color: #ffffff;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-top: 1em;
+  font-size: 1em;
+}
+
+.index-button-to-quiz {
+  width: 175px;
+  height: 50px;
+  background-color: #2E4057;
+  border: 1px solid #2E4057;
+  border-radius: 3px;
+  color: white;
   text-transform: uppercase;
   letter-spacing: 1px;
   margin-top: 1em;
