--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
 <div class="index-container">
-  <a href="/players/new"><button class="index-button-to-quiz" type="button" name="button">Take Quiz</button></a>
-  <a href="/users/new"><button  class="index-button-to-profile" type="button" name="button">Create Profile</button></a>
+  <a href="/players/new"><button class="index-button-to-quiz" type="button" name="button">Play</button></a>
+  <!-- <a href="/users/new"><button  class="index-button-to-profile" type="button" name="button">Create Profile</button></a> -->
 </div>
