--- a/public/scss/libraries/base/_base.scss
+++ b/public/scss/libraries/base/_base.scss
@@ -9,6 +9,7 @@
 body {
   width: 100vw;
   height: 100vh;
+  position: relative;
   display: flex;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   background: rgba(255, 250, 250, 1);
