--- a/public/scss/libraries/pages/_quiz.scss
+++ b/public/scss/libraries/pages/_quiz.scss
@@ -1,10 +1,11 @@
 .picture {
   width: 30em;
   height: 30em;
-  background: tomato;
+  // background: lightgray;
   margin: 1%;
   & img {
     width: 100%;
+    height: auto;
   }
 }
 
@@ -36,4 +37,24 @@
     font-size: 1.5em;
     line-height: 2em;
   }
+}
+
+.win {
+  z-index: 100000;
+  font-size: 4em;
+  color: #488B49;
+  position: absolute;
+  left: 50%;
+  top: 20%;
+  transform: translateX(-50%);
+}
+
+.lose {
+  z-index: 100000;
+  font-size: 4em;
+  color: red;
+  position: absolute;
+  left: 50%;
+  top: 20%;
+  transform: translateX(-50%);
 }
