--- a/views/players_new.erb
+++ b/views/players_new.erb
@@ -1,4 +1,4 @@
 <form class="" action="/players/create" method="post">
-  <input type="text" name="player_name" value="" placeholder="Name">
-  <button type="submit" name="button">Play!</button>
+  <input class="new-player-input" type="text" name="player_name" value="" placeholder="Name">
+  <button class="new-player" type="submit" name="button">Play!</button>
 </form>
