--- a/public/css/main.css
+++ b/public/css/main.css
@@ -651,6 +651,25 @@ select {
   background-position: center;
   background-size: cover; }
 
+.index-container input {
+  border: 1px solid #111;
+  background: transparent;
+  width: 150px;
+  padding: 5px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  height: 34px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+  background: lightgrey;
+  width: 175px;
+  height: 50px;
+  color: #2E4057;
+  font-size: 1em;
+  border-radius: 3px; }
+
 h1 {
   font-size: 1.5em; }
 
