--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,8 @@
 <div class="index-container">
-  <a href="/players/new"><button class="index-button-to-quiz" type="button" name="button">Play</button></a>
+  <form class="" action="/players/create" method="post">
+    <input class="new-player-input" type="text" name="player_name" value="" placeholder="Name">
+    <button class="new-player" type="submit" name="button">Play!</button>
+  </form>
+
   <!-- <a href="/users/new"><button  class="index-button-to-profile" type="button" name="button">Create Profile</button></a> -->
 </div>
