--- a/views/first_name.erb
+++ b/views/first_name.erb
@@ -58,7 +58,7 @@
 
 <% end %>
 
-<h1>Score: <%=@player.score%> out of: <%=@player.counter%> </h1>
+<h1 class="score">Score: <%=@player.score%> out of: <%=@player.counter%> </h1>
 
 <div class="nametag-container">
   <div class="nametag-card">
